# serializer version: 1
# name: test_sensors[sensor.my_blanco_critical_errors-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.my_blanco_critical_errors',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Critical errors',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Critical errors',
    'platform': 'blanco',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'error_count_critical',
    'unique_id': 'abc123devid_error_count_critical',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.my_blanco_critical_errors-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'errors': list([
        dict({
          'err_code': 101,
          'err_ts': '2023-11-14T22:13:20+00:00',
          'err_type': 'CRITICAL',
        }),
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'My BLANCO Critical errors',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.my_blanco_critical_errors',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_sensors[sensor.my_blanco_last_online-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.my_blanco_last_online',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Last online',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Last online',
    'platform': 'blanco',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'online',
    'unique_id': 'abc123devid_online',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.my_blanco_last_online-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'timestamp',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'My BLANCO Last online',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.my_blanco_last_online',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2023-11-14T22:13:20+00:00',
  })
# ---
# name: test_sensors[sensor.my_blanco_warnings-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.my_blanco_warnings',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Warnings',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Warnings',
    'platform': 'blanco',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'error_count_warning',
    'unique_id': 'abc123devid_error_count_warning',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.my_blanco_warnings-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'errors': list([
        dict({
          'err_code': 202,
          'err_ts': '2023-11-14T22:13:21+00:00',
          'err_type': 'WARNING',
        }),
        dict({
          'err_code': 303,
          'err_ts': None,
          'err_type': 'WARNING',
        }),
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'My BLANCO Warnings',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.my_blanco_warnings',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2',
  })
# ---
